<resources>
    <string name="app_name">UWM Tuition Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="prompt">Select Group</string>
    <string name="description">Concert Image</string>
    <string name="calculate">Calculate</string>
    <string name="tuition_app">Tuition App</string>
    <string name="number_of_credits">Number of Credits</string>
    <string name="cost_of_tuition">Cost of Tuition</string>
    <string-array name="txtGroup">
        <item>Fall Term 2020</item>
        <item>Spring Term 2021</item>
        <item>Summer Term 2021</item>
    </string-array>
</resources>
