<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cost_of_tuition"
        android:textColor="#FFC107"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/txtTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/number_of_credits"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorHint="#FFFFFF"
        android:textSize="36sp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGroup"
        android:layout_below="@+id/txtTickets"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog"
        android:prompt="@string/prompt"
        android:entries="@array/txtGroup" />

    <Button
        android:id="@+id/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFC107"
        android:text="@string/calculate"
        android:textColor="#000000"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imgConcert"
        android:layout_width="wrap_content"
        android:layout_height="215dp"
        android:layout_below="@+id/txtResult"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/description"
        android:cropToPadding="true"
        android:focusable="true"
        android:src="@drawable/uwm"
        tools:srcCompat="@drawable/uwm" />

</RelativeLayout>